# cpp-countdown-solver

./: .clang-format  .dir-locals.el  .gitignore  CMakeLists.txt  ReadMe.org  flake.nix
.github/workflows/: lint.yml
src/: expression.cpp  expression.hpp  helper.cpp  helper.hpp  main.cpp  solver.cpp  solver.hpp
